# PERNET_Victor_Python_Projet10

./: .gitignore  README.md  pyproject.toml
softdesk/authentication/: permissions.py
softdesk/snippets/: models.py  serializers.py  views.py
softdesk/snippets/migrations/: 0001_initial.py
softdesk/softdesk/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py
softdesk/softdesk/migrations/: 0001_initial.py  0002_alter_contributor_options_contributor_time_created_and_more.py  0002_alter_issue_contributor_assigned.py  0003_alter_issue_contributor_assigned.py  0004_alter_issue_contributor_assigned.py  0005_user_age_user_can_be_contacted_and_more.py  0006_alter_comment_id.py  0007_alter_user_managers.py  0008_alter_user_managers.py
softdesk_API/: manage.py  settings.py  urls.py  wsgi.py
softdesk_API/authentication/: serializers.py  views.py
softdesk_API/authentication/migrations/: 0001_initial.py
softdesk_API/quickstart/: views.py
softdesk_API/softdesk_API/: apps.py  asgi.py  serializers.py  settings.py  urls.py
softdesk_API/support_API/: apps.py  models.py  serializers.py  views.py
softdesk_API/support_API/migrations/: 0001_initial.py
softdesk_api_test/: Test.bru  bruno.json  collection.bru
softdesk_collection/: bruno.json  hello.bru  users.bru
testapis_softdesk/: Projects.bru  bruno.json  collection.bru
